2019-11-04  Tobias Burnus  <tobias@codesourcery.com>

	* config/gcn/gcn.c (gcn_omp_device_kind_arch_isa): New function.
	(TARGET_OMP_DEVICE_KIND_ARCH_ISA): Redefine to
	gcn_omp_device_kind_arch_isa.
	* config/gcn/t-omp-device: New file.
	* configure.ac: Support gcn for omp_device_property.
	* configure: Regenerate.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.h (vrp_val_min): Remove handle_pointers argument.
	(vrp_val_max): Same.
	(vrp_val_is_min): Same.
	(vrp_val_is_max): Same.
	(value_range_base::nonzero_p): Remove last argument to
	vrp_val_is_max.
	* tree-vrp.c (vrp_val_min): Remove handle_pointers argument.
	(vrp_val_max): Same.
	(vrp_val_is_min): Same.
	(vrp_val_is_max): Same.
	(value_range_base::set_varying): Remove last argument to vrp_val*.
	(value_range_base::dump): Same.
	(value_range_base::set): Same.
	(value_range_base::normalize_symbolics): Same.
	(value_range_base::num_pairs): Same.
	(value_range_base::lower_bound): Same.
	(value_range_base::upper_bound): Same.
	(ranges_from_anti_range): Remove handle_pointers argument.
	(value_range_base::singleton_p): Remove last argument to
	ranges_from_anti_range.

2019-11-04  Jan Hubicka  <jh@suse.cz>

	* ipa-reference.c (init_function_info): Initialize
	info->global.statics_read.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::invert): Use constructors to build
	range.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (range_int_cst_singleton_p): Remove.
	* tree-vrp.h (range_int_cst_singleton_p): Remove.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::normalize_addresses): Handle
	VR_UNDEFINED.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (dump_assert_info): New.
	(dump_asserts_info): New.

2019-11-04  Jan Hubicka  <jh@suse.cz>

	* ipa-inline-transform.c: Include ipa-utils.h
	(inline_call): Set thunk_expansion flag.
	* ipa-utils.h (thunk_expansion): Declare.