@@ -1,3 +1,7 @@
+2019-11-04  Aldy Hernandez  <aldyh@redhat.com>
+
+	* tree-vrp.c (value_range_base::set): Do not special case pointers.
+
 2019-11-04  Tobias Burnus  <tobias@codesourcery.com>
 
 	* config/gcn/gcn.c (gcn_omp_device_kind_arch_isa): New function.
